@@ -791,7 +791,7 @@ typedef union {
 
 
 /******************************************************
- ****************  __float128 support  ****************
+ ****************#  _Float128 support  ****************
  ******************************************************/
 
 /* This is standardized by IEEE 754-2008. */
